<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) Google

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name" translatable="false">My Online Store App</string>
    <string name="store_name" translatable="false">My Online Store</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="channel_name" translatable="false">Payment Channel</string>
    <string name="send_notification" translatable="false">Send Notification</string>
    <string name="notification_title"  translatable="false">Account TopUp</string>
    <string name="notification_text"  translatable="false">Your account balance in close to zero. Top it up now.</string>
    <string name="pay_other_method" translatable="false">Top-up using other method</string>
    <string name="notification_price_1" translatable="false">$10.00</string>
    <string name="notification_price_2" translatable="false">$25.00</string>
    <string name="notification_price_3" translatable="false">$50.00</string>
</resources>
