<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:textAlignment="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_title"
            android:textColor="#000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_text"
            android:textColor="#000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C83333"
            android:backgroundTint="#FFFFFF"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/buttonPrice1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/notification_price_1" />
            <Button
                android:id="@+id/buttonPrice2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/notification_price_2" />

            <Button
                android:id="@+id/buttonPrice3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/notification_price_3" />
        </LinearLayout>

        <include
            android:id="@+id/googlepay_button"
            layout="@layout/googlepay_button"
            android:layout_width="150dp"
            android:layout_height="@dimen/buy_button_height"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonPayOther"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:elevation="0dp"
            android:text="@string/pay_other_method"
            android:textAllCaps="true"
            android:textSize="14sp" />

    </LinearLayout>